pyReScene 0.6.1 (2016-06-26)
===============

 * pyReScene Auto: skip candidate stored files or folders based on regex
 * pyReScene Auto: missing proof RAR prevented SRR to be created
 * pyReScene Auto: do not check .m2ts and .ts against the main files
 * ReSample: Python 3 always made a copy of the music file before fingerprint
 * ReSample: Python 3 error fixed on very broken music tracks
 * ReSample: failed to parse .srs file again
 * ReScene: Extract stored files based on regular expression
 * ReScene: SRR padding block in -e output correctly displayed
 * ReScene: RELOADED, QCF custom RAR packer issues resolved
 * ReScene: display CRC error messages upon reconstruction
 * ReScene: suppress invalid error message on compressed files
 * ReScene: warning added to not use srr for vobsub creation (use auto instead)
 * TVMove: script to move files to the correct episode release folder

pyReScene 0.6 (2016-05-30)
=============

 * Python 3 support (thanks to vadmium)
 * pyReScene Auto: Folder right-click shell extension for Windows File Explorer
 * pyReScene Auto: don't create SRR meta data for proof images in RAR
 * pyReScene Auto: SRRs for vobsubs path bug fixed and optional switch added
 * pyReScene Auto: stored SRR and RAR files above their SFV in list
 * pyReScene Auto: crash fixed when path of SRR to create was too long
 * pyReScene Auto: failed to create SRRs when 'subs' was found in file names
 * pyReScene Auto: --best option added (same as -c -s -v)
 * pyReScene Auto: includes images from Cover/Covers subfolders
 * pyReScene Auto: fewer .mp3.txt files (when ID3v1 tag is available at end)
 * pyReScene Auto: skipping of known .log files didn't work (e.g. rushchk.log)
 * pyReScene Auto: no empty error reports
 * pyReScene Auto: --skip (-x) and --skip-list options added
 * ReSample: VOB, M2TS (no reconstruction) and MPEG SRS creation support
 * Resample: "ReSample .NET 1.3 Preview" fix: MKV header compression/stripping
 * ReSample: Faster AVI reconstruction times.